--- a/source/catalog.html
+++ b/source/catalog.html
@@ -99,24 +99,18 @@
               />
             </picture>
           </a>
-          <button class="main-nav__toggle">
+          <button class="main-nav__toggle main-nav__toggle--opened main-nav__toggle--closed">
             <span class="visually-hidden">Открыть меню</span>
-            <svg width="24" height="18">
-              <use href="#button-open"></use>
-            </svg>
-            <svg width="20" height="20">
-              <use href="#button-close"></use>
-            </svg>
           </button>
         </div>
-        <nav class="main-nav main-nav--closed">
+        <nav class="main-nav main-nav--opened">
           <ul class="main-nav__list">
             <li class="main-nav__list-item">
               <a class="main-nav__list-link" href="index.html">
                 <span>Главная</span></a
               >
             </li>
-            <li class="main-nav__list-item main-nav__list-item--active">
+            <li class="main-nav__list-item  main-nav__list-item--active">
               <a class="main-nav__list-link" href="catalog.html"
                 >Каталог продукции</a
               >
