--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
     <title>Cat Energy Каталог</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.min.css" />
-    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico">
+    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico" />
   </head>
   <body>
     <header class="main-header">
@@ -489,7 +489,7 @@
             </ul>
           </div>
           <div class="footer__block-htmlAcademy">
-            <a class="footer___academy-link" href="#!">
+            <a class="footer___academy-link" href="https://htmlacademy.ru">
               <p class="footer___academy-title">HTML Academy</p>
               <svg
                 class="footer___academy-icon"
