--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
     <title>Cat Energy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.min.css" />
-    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico">
+    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico" />
   </head>
   <body>
     <header class="main-header">
@@ -75,9 +75,7 @@
             <div class="form__wrapper">
               <div class="form__set form__set-options">
                 <div class="form__input-block">
-                  <label for="catname" class="form__set-label"
-                    >ИМЯ:*</label
-                  >
+                  <label for="catname" class="form__set-label">ИМЯ:*</label>
                   <input
                     required
                     type="text"
@@ -88,9 +86,7 @@
                   />
                 </div>
                 <div class="form__input-block">
-                  <label for="mass" class="form__set-label"
-                    >ВЕС (КГ):*</label
-                  >
+                  <label for="mass" class="form__set-label">ВЕС (КГ):*</label>
                   <input
                     required
                     type="text"
@@ -117,6 +113,7 @@
                 <ul class="form-program__list">
                   <li class="form-program__list__item">
                     <input
+                      checked
                       class="form-program__check-input"
                       type="radio"
                       id="slim"
@@ -167,9 +164,7 @@
                 </h2>
                 <div class="form__set-foot">
                   <div class="form__set-block">
-                    <label class="form__set-label" for="mail"
-                      >E-MAIL:*</label
-                    >
+                    <label class="form__set-label" for="mail">E-MAIL:*</label>
                     <input
                       required
                       class="form__set-data"
@@ -183,9 +178,7 @@
                     </svg>
                   </div>
                   <div class="form__set-block">
-                    <label class="form__set-label" for="phone"
-                      >ТЕЛЕФОН:*</label
-                    >
+                    <label class="form__set-label" for="phone">ТЕЛЕФОН:*</label>
                     <input
                       required
                       class="form__set-data"
@@ -342,7 +335,7 @@
             </ul>
           </div>
           <div class="footer__block-htmlAcademy">
-            <a class="footer___academy-link" href="#!">
+            <a class="footer___academy-link" href="https://htmlacademy.ru">
               <p class="footer___academy-title">HTML Academy</p>
               <svg
                 class="footer___academy-icon"
