--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>Cat Energy</title>
     <link rel="stylesheet" href="./css/style.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico">
+    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico" />
   </head>
   <body class="page__body">
     <header class="main-header main-header-index">
@@ -29,9 +29,7 @@
               />
             </picture>
           </a>
-          <button
-            class="main-header__toggle main-header__toggle--opened"
-          >
+          <button class="main-header__toggle main-header__toggle--opened">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
@@ -70,9 +68,7 @@
                 />
                 <source
                   media="(min-width:768px)"
-                  srcset="
-                  img/index-can-tablet.png
-                  "
+                  srcset="img/index-can-tablet.png"
                 />
                 <img
                   class="head-block__img"
@@ -83,9 +79,7 @@
                 />
               </picture>
             </div>
-            <a class="button head-block__button">
-              подобрать программу
-            </a>
+            <a class="button head-block__button"> подобрать программу </a>
           </div>
         </div>
       </section>
@@ -330,7 +324,7 @@
             </ul>
           </div>
           <div class="footer__block-htmlAcademy">
-            <a class="footer___academy-link" href="#!">
+            <a class="footer___academy-link" href="https://htmlacademy.ru">
               <p class="footer___academy-title">HTML Academy</p>
               <svg
                 class="footer___academy-icon"
