--- a/source/form.html
+++ b/source/form.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <title>Cat Energy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preload" as="font" href="./fonts/Lato-Regular.woff2" />
+    <link rel="preload" as="font" href="./fonts/Oswald-Regular.woff2" />
     <link rel="stylesheet" href="./css/style.min.css" />
-    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico" />
+    <link sizes="32x32" rel="icon" href="img/favicon/favicon.svg" />
   </head>
   <body>
     <header class="main-header">
@@ -30,7 +32,7 @@
             </picture>
           </a>
           <button
-            class="main-header__toggle main-header__toggle--opened main-header__toggle--closed"
+            class="main-header__toggle main-header__toggle--closed"
           >
             <span class="visually-hidden">Открыть меню</span>
           </button>
