--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Energy Каталог</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preload" as="font" href="./fonts/Lato-Regular.woff2" />
+    <link rel="preload" as="font" href="./fonts/Oswald-Regular.woff2" />
     <link rel="stylesheet" href="./css/style.min.css" />
-    <link sizes="32x32" rel="icon" href="img/favicon/favicon.ico" />
+    <link sizes="32x32" rel="icon" href="img/favicon/favicon.svg" />
   </head>
   <body>
     <header class="main-header">
@@ -36,7 +37,7 @@
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
-        <nav class="main-nav main-nav--opened">
+        <nav class="main-nav main-nav--closed">
           <ul class="main-nav__list">
             <li class="main-nav__list-item">
               <a class="main-nav__list-link" href="index.html">
@@ -375,7 +376,7 @@
             <h2 class="additionally__title">Дополнительные товары</h2>
             <div class="additionally__inner">
               <ul class="additionally__list">
-                <li class="additionally__item additionally__item-sugar">
+                <li class="additionally__item">
                   <h3 class="additionally__item-title">сахарозаменитель</h3>
                   <table class="additionally__item-tab">
                     <tr>
@@ -387,7 +388,7 @@
                   </table>
                   <a class="additionally__button button">Заказать</a>
                 </li>
-                <li class="additionally__item additionally__item-water">
+                <li class="additionally__item">
                   <h3 class="additionally__item-title">питьевая вода</h3>
                   <table class="additionally__item-tab">
                     <tr>
@@ -397,7 +398,7 @@
                   </table>
                   <a class="additionally__button button">Заказать</a>
                 </li>
-                <li class="additionally__item additionally__item-milk">
+                <li class="additionally__item">
                   <h3 class="additionally__item-title">молоко</h3>
                   <table class="additionally__item-tab">
                     <tr>
@@ -407,7 +408,7 @@
                   </table>
                   <a class="additionally__button button">Заказать</a>
                 </li>
-                <li class="additionally__item additionally__item-vitamin">
+                <li class="additionally__item">
                   <h3 class="additionally__item-title">витамины</h3>
                   <table class="additionally__item-tab">
                     <tr>
